--- a/css/mine.css
+++ b/css/mine.css
@@ -25,3 +25,12 @@
 .bg-primary {
   background-color: #9c27b0 !important;
 }
+
+.event-card {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.event-card:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
