--- a/css/material-kit.css
+++ b/css/material-kit.css
@@ -14628,7 +14628,7 @@ small,
 .footer-big h4,
 .media .media-heading {
   font-weight: 700;
-  font-family: "Roboto Slab", "Times New Roman", serif;
+  font-family: "Roboto Slab", serif, "Times New Roman";
 }
 
 .title,
